...
      }}>
      <Tab.Screen
        name="Home"
        component={HomeScreen}
        options={{
          tabBarLabel: 'Início',
          tabBarTestID: 'tab-home',
          // tabBarIcon: ({ color, _size }) => (
          //   <Icon name="home" color={color} size={size} />
          // ),
        }}
      />
      <Tab.Screen
        name="Shop"
        component={ShopScreen}
        options={{
          tabBarLabel: 'Loja',
          tabBarTestID: 'tab-shop',
          // tabBarIcon: ({ color, _size }) => (
          //   <Icon name="shopping" color={color} size={size} />
          // ),
        }}
      />
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          tabBarLabel: 'Configurações',
          tabBarTestID: 'tab-settings',
          // tabBarIcon: ({ color, _size }) => (
          //   <Icon name="settings" color={color} size={size} />
          // ),
        }}
      />
    </Tab.Navigator>
...
